# flutter_ecosed

./: .metadata  AUTHORS  CHANGELOG.md  CNAME  README.md  ffigen.yaml  flutter_ecosed.code-workspace  publish.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart  simple_test.dart
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: example_plugin.dart  main._dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_ecosed.podspec
ios/Classes/: FlutterEcosedPlugin.swift  flutter_ecosed.c
lib/: flutter_ecosed.dart  flutter_ecosed_web.dart
lib/src/: app.dart  entry.dart  json.dart  person.dart
linux/: CMakeLists.txt
macos/: flutter_ecosed.podspec
macos/Classes/: flutter_ecosed.cpp
rust/: Cargo.toml
scripts/: publish_package.sh  update_cargokit.sh
src/: CMakeLists.txt  flutter_ecosed.c  flutter_ecosed.cpp  flutter_ecosed.h  flutter_ecosed.hpp
test/: flutter_ecosed_interface_test.dart  flutter_ecosed_method_channel_test.dart  flutter_ecosed_platform_test.dart  flutter_ecosed_test.dart
windows/: CMakeLists.txt
(+223 files in other folders)
